# fastapi-cache

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml  tox.ini
.github/workflows/: ci-cd.yml  towncrier.yml
changelog.d/: 173.feature.md  2.misc.md
examples/in_memory/: main.py
examples/redis/: main.py
fastapi_cache/: __init__.py  coder.py  decorator.py  key_builder.py  types.py
fastapi_cache/backends/: dynamodb.py  inmemory.py  memcached.py  redis.py
tests/: pyproject.toml  test_codecs.py  test_decorator.py  test_properties.py
