[project]
name = "fastapi-cache2"
version = "0.2.3"
description = "Cache for FastAPI"
authors = [{ name = "long2ice", email = "long2ice@gmail.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["fastapi", "cache", "caching"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn",
    "typing-extensions>=4.10.0,<5.0.0",
    "pendulum>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/long2ice/fastapi-cache"
Repository = "https://github.com/long2ice/fastapi-cache.git"
Documentation = "https://github.com/long2ice/fastapi-cache"

[project.optional-dependencies]
redis = ["redis>=5.0.8,<7.0.0"]
memcache = ["aiomcache>=0.8.2,<0.9.0"]
dynamodb = ["aiobotocore>=2.13.1,<3.0.0"]
all = [
    "redis>=5.0.8,<7.0.0",
    "aiomcache>=0.8.2,<0.9.0",
    "aiobotocore>=2.13.1,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "requests",
    "coverage>=7.0,<9.0",
    "httpx",
    "towncrier>=24.8.0",
    "hypothesis>=6.0",
    "fakeredis[lua]>=2.0",
    "pytest-asyncio>=0.23.0",
    "jinja2",
]
linting = ["ruff>=0.4.0", "ty"]


[tool.ty.src]
include = ["fastapi_cache/"]
exclude = ["examples/"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
all = "error"
missing-override-decorator = "warn"
unresolved-import = "warn"
unresolved-attribute = "warn"
invalid-return-type = "warn"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "fastapi_cache"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/long2ice/fastapi-cache/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/long2ice/fastapi-cache/issues/{issue})"


[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "S", "W", "UP"]
ignore = ["E501"]

[tool.uv.build-backend]
module-root = ""
module-name = "fastapi_cache"

[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"
